workspace-sf/force-app/main/default/objects/ContratanteProposta__c/ContratanteProposta__c.object-meta.xml
<CustomObject>
    <description>Objeto responsável por armazenar o cadastro dos contratantes da proposta</description>
    <label>Contratante da proposta</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contratantes da proposta</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>