workspace-sf/force-app/main/default/objects/ContratanteProposta__c/fields/BairroCorrespondencia__c.field-meta.xml
<CustomField>
    <fullName>BairroCorrespondencia__c</fullName>
    <label>Bairro de correspondência</label>
    <length>80</length>
    <type>Text</type>
</CustomField>