workspace-sf/force-app/main/default/objects/ContratanteProposta__c/fields/CartaoCredito__c.field-meta.xml
<CustomField>
    <fullName>CartaoCredito__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cartão de crédito</label>
    <referenceTo>CartaoCredito__c</referenceTo>
    <relationshipLabel>Contratantes da proposta</relationshipLabel>
    <relationshipName>ContratantesProposta</relationshipName>
    <type>Lookup</type>
</CustomField>