workspace-sf/force-app/main/default/objects/ContratanteProposta__c/fields/Celular__c.field-meta.xml
<CustomField>
    <fullName>Celular__c</fullName>
    <label>Celular</label>
    <type>Phone</type>
</CustomField>