workspace-sf/force-app/main/default/objects/ContratanteProposta__c/fields/CidadeCorrespondencia__c.field-meta.xml
<CustomField>
    <fullName>CidadeCorrespondencia__c</fullName>
    <label>Cidade de correspondência</label>
    <length>255</length>
    <type>Text</type>
</CustomField>