workspace-sf/force-app/main/default/objects/ContratanteProposta__c/fields/CPFSocio__c.field-meta.xml
<CustomField>
    <fullName>CPFSocio__c</fullName>
    <label>CPF Sócio</label>
    <length>14</length>
    <type>Text</type>
</CustomField>