workspace-sf/force-app/main/default/objects/ContratanteProposta__c/fields/CupomDesconto__c.field-meta.xml
<CustomField>
    <fullName>CupomDesconto__c</fullName>
    <label>CupomDesconto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>