workspace-sf/force-app/main/default/objects/ContratanteProposta__c/fields/Endereco_Socio__c.field-meta.xml
<CustomField>
    <fullName>Endereco_Socio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Endereço do sócio e/ou administrador da empresa</description>
    <label>Endereço do sócio e/ou administrador</label>
    <referenceTo>Endereco__c</referenceTo>
    <relationshipLabel>Contratantes da proposta</relationshipLabel>
    <relationshipName>Contratantes_da_proposta</relationshipName>
    <type>Lookup</type>
</CustomField>