workspace-sf/force-app/main/default/objects/ContratanteProposta__c/fields/Forma_de_receber_apolice__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_receber_apolice__c</fullName>
    <label>Forma de receber apólice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>