workspace-sf/force-app/main/default/objects/ContratanteProposta__c/fields/InformacaoBancaria__c.field-meta.xml
<CustomField>
    <fullName>InformacaoBancaria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Informação bancária</label>
    <referenceTo>InformacaoBancaria__c</referenceTo>
    <relationshipLabel>Contratantes da proposta</relationshipLabel>
    <relationshipName>ContratantesProposta</relationshipName>
    <type>Lookup</type>
</CustomField>