workspace-sf/force-app/main/default/objects/ContratanteProposta__c/fields/LogradouroCorrespondencia__c.field-meta.xml
<CustomField>
    <fullName>LogradouroCorrespondencia__c</fullName>
    <label>Logradouro de correspondência</label>
    <length>255</length>
    <type>Text</type>
</CustomField>