workspace-sf/force-app/main/default/objects/ContratanteProposta__c/fields/Nome_do_segurado__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_segurado__c</fullName>
    <label>Nome do segurado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>