workspace-sf/force-app/main/default/objects/ContratanteProposta__c/fields/Numero_de_documentacao__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_documentacao__c</fullName>
    <label>Número de documentação do Sócio</label>
    <length>18</length>
    <type>Text</type>
</CustomField>