workspace-sf/force-app/main/default/objects/ContratanteProposta__c/fields/NumeroEndereco__c.field-meta.xml
<CustomField>
    <fullName>NumeroEndereco__c</fullName>
    <label>Número do endereço</label>
    <length>255</length>
    <type>Text</type>
</CustomField>