workspace-sf/force-app/main/default/objects/ContratanteProposta__c/fields/Pais_emissor__c.field-meta.xml
<CustomField>
    <fullName>Pais_emissor__c</fullName>
    <label>País emissor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pais</valueSetName>
    </valueSet>
</CustomField>