workspace-sf/force-app/main/default/objects/ContratanteProposta__c/fields/PEP_do_socio__c.field-meta.xml
<CustomField>
    <fullName>PEP_do_socio__c</fullName>
    <label>PEP do sócio e/ou administrador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
            <value>
                <fullName>Relacionamento Próximo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>