workspace-sf/force-app/main/default/objects/ContratanteProposta__c/fields/PremioIntegral__c.field-meta.xml
<CustomField>
    <fullName>PremioIntegral__c</fullName>
    <label>Prêmio Integral</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>