workspace-sf/force-app/main/default/objects/ContratanteProposta__c/fields/Profissao__c.field-meta.xml
<CustomField>
    <fullName>Profissao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Profissão do sócio e/ou administrador da empresa</description>
    <label>Profissão do sócio e/ou administrador</label>
    <referenceTo>Profissao__c</referenceTo>
    <relationshipLabel>Contratantes da proposta</relationshipLabel>
    <relationshipName>Contratantes_da_proposta</relationshipName>
    <type>Lookup</type>
</CustomField>