workspace-sf/force-app/main/default/objects/ContratanteProposta__c/fields/QuantidadeParcelas__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeParcelas__c</fullName>
    <label>Quantidade de parcelas</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>