workspace-sf/force-app/main/default/objects/ContratanteProposta__c/fields/Telefone_Outro__c.field-meta.xml
<CustomField>
    <fullName>Telefone_Outro__c</fullName>
    <label>Telefone Outro</label>
    <type>Phone</type>
</CustomField>