workspace-sf/force-app/main/default/objects/ContratanteProposta__c/fields/Tipo_Doc_Identificacao__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Doc_Identificacao__c</fullName>
    <label>Tipo Doc Identificação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>R.G</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>