workspace-sf/force-app/main/default/objects/ContratanteProposta__c/fields/TipoEnderecoCorrespondencia__c.field-meta.xml
<CustomField>
    <fullName>TipoEnderecoCorrespondencia__c</fullName>
    <inlineHelpText>O campo &quot;recado&quot; foi removido. diferente da picklist Tipo de endereço do objeto Endereço, o objeto Segurado da proposta terá dois campos de endereço. Um como o endereço principal e outro como endereço de correspondência, inutilizando o campo &quot;recado&quot;</inlineHelpText>
    <label>Tipo de endereço de correspondência</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Residencial</fullName>
            </value>
            <value>
                <fullName>Veraneio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>