workspace-sf/force-app/main/default/objects/ContratanteProposta__c/fields/TipoLogradouro__c.field-meta.xml
<CustomField>
    <fullName>TipoLogradouro__c</fullName>
    <label>Tipo de logradouro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alameda</fullName>
            </value>
            <value>
                <fullName>Avenida</fullName>
            </value>
            <value>
                <fullName>Rua</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>