workspace-sf/force-app/main/default/objects/ContratanteProposta__c/fields/TipoLogradouroCorrespondencia__c.field-meta.xml
<CustomField>
    <fullName>TipoLogradouroCorrespondencia__c</fullName>
    <label>Tipo de logradouro de correspondência</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alameda</fullName>
            </value>
            <value>
                <fullName>Avenida</fullName>
            </value>
            <value>
                <fullName>Rua</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>