workspace-sf/force-app/main/default/objects/ContratanteProposta__c/fields/Valor_DemaisParcelas__c.field-meta.xml
<CustomField>
    <fullName>Valor_DemaisParcelas__c</fullName>
    <description>Valor das demais parcelas quando selecionado Cartão Recorrência</description>
    <label>Valor DemaisParcelas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>