workspace-sf/force-app/main/default/objects/ContratanteProposta__c/fields/Valor_PrimeiraParcela__c.field-meta.xml
<CustomField>
    <fullName>Valor_PrimeiraParcela__c</fullName>
    <description>Valor da primeira parcela quando selecionado Cartão Recorrência</description>
    <label>Valor PrimeiraParcela</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>