workspace-sf/force-app/main/default/objects/ContratanteProposta__c/fields/VencimentoDemaisParcelas__c.field-meta.xml
<CustomField>
    <fullName>VencimentoDemaisParcelas__c</fullName>
    <description>Campo que apresenta a opção de vencimento a cada 30 dias a partir da data de hoje ou o dia de todo mês onde ocorre o vencimento da segunda parcela em diante.</description>
    <inlineHelpText>Campo que apresenta a opção de vencimento a cada 30 dias a partir da data de hoje ou o dia de todo mês onde ocorre o vencimento da segunda parcela em diante.</inlineHelpText>
    <label>Vencimento das demais parcelas</label>
    <length>20</length>
    <type>Text</type>
</CustomField>